Further changes to Night Mode - had missed referencing .state-visible correctly.

--- a/theme/hillhead40/scss/accessibility.scss
+++ b/theme/hillhead40/scss/accessibility.scss
@@ -307,7 +307,7 @@ body.hillhead40-night .drawer {
   background-color: #182941 !important;
 }
 
-body.hillhead40-night nav.navbar.fixed-top a:hover, body.hillhead40-night nav.navbar.fixed-top a:visited, .state-visible {
+body.hillhead40-night nav.navbar.fixed-top a:hover, body.hillhead40-night nav.navbar.fixed-top a:visited, body.hillhead40-night .state-visible {
   background-color:#121E30 !important;
 }
 
